--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -640,6 +640,11 @@ en:
         xxx: 
         zho: Zho
         zza: Zza
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
       section:
         family: Family
         refugees: Refugees
@@ -649,11 +654,6 @@ en:
       sort_order:
         nearby: Nearby
         relevance: Relevance
-      residency_status:
-        before_the_asylum_decision: 
-        with_a_residence_permit: 
-        with_deportation_decision: 
-        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -730,14 +730,15 @@ en:
         approach: By which means?
         gender: Gender
         language: Language
+        residency_status: Residency status
         sort: Sort by
         target_audience: For whom?
-        residency_status: Residency status
       option_any: any
       pagination:
         back: Previous
         gap: "…"
         next: Next
+      reset_label: 
       sort:
         nearby: nearby
         relevance: Best matches
@@ -745,7 +746,6 @@ en:
         categories: Categories
         filter: Filter
         map: Map
-      reset_label: 
     search_results:
       bridge: for the search term
       enclosing: found
@@ -907,13 +907,51 @@ en:
     modal_create:
       js:
         erb:
-          success: 
+          success: Email successfully entered!
     partials:
       banner:
         teaser:
           link: Find out more
           refugees: Soon with support services for refugees
           text: clarat.org is currently under construction
+      callout:
+        callout:
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
+          how:
+            family:
+              heading: How does clarat family work?
+              text: Enter your problem into the search field and the area where you are looking. Click on the magnifying glass. The support services in your area will show up instantly.
+            refugees:
+              heading: How does clarat refugees work?
+              text: Enter your problem into the search field and the area where you are looking. Click on the magnifying glass. The support services in your area will show up instantly.
+          what:
+            family:
+              heading: What can you find here?
+              text: 'Information about support services in your area. For problems with: family, health, learning & work and violence & crime.'
+            refugees:
+              heading: What can you find here?
+              text: 'Information about support services in your area. For problems with: asylum & law, family, health, learning & work and violence & crime.'
+          who:
+            family:
+              heading: Who can find help here?
+              text: Every family in Germany, parents, their children and pregnant women can find help here. Friends and relatives can, too.
+            heading: 
+            refugees:
+              heading: Who can find help here?
+              text: Everyone who has come to Germany as a refugee. Refugee children and young people, too. And people who are looking for help for refugees.
       footer:
         about: About us
         blog: Blog
@@ -935,6 +973,26 @@ en:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: عربي
+          de: Deutsch
+          en: English
+          fa: فارسی
+          fr: Français
+          pl: Polski
+          ru: Русский
+          tr: Türkçe
+      hero:
+        claim:
+          family: Support services for children, teenagers and families
+        hero:
+          button_label: 
+          logline: 
       modal:
         beta_modal:
           link: write us a message.
@@ -943,9 +1001,9 @@ en:
             many support services and programmes in Berlin. Soon we will be collecting support services for other
             cities as well. And we appreciate your help: is there anything you think we could do better?
             Or is something not working? Simply
+        more_information_overlay: 
         send: 
         unavailable_location_modal: At the moment, we only have telephone or online support services for your current location. That means you can get help over the telephone. Or online. For example, via e-mail or over chat. We will let you know as soon as there are support services near you. Please enter your e-mail address here.
-        more_information_overlay: 
       nav_lang:
         legal_title: Legal text can only be read in German.
         title: |-
@@ -983,64 +1041,6 @@ en:
               family: switch to <span class="top-bar__emphasis">clarat refugees</span>
               refugees: switch to <span class="top-bar__emphasis">clarat family</span>
         title: Automated translations!
-      header:
-        about: 
-        blog: 
-        contact: 
-        faq: 
-        languages:
-          ar: 
-          de: 
-          en: 
-          fa: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
-      hero:
-        claim:
-          family: Support services for children, teenagers and families
-        hero:
-          logline: 
-          button_label: 
-      callout:
-        callout:
-          how:
-            family:
-              heading: How does clarat family work?
-              text: Enter your problem into the search field and the area where you are looking. Click on the magnifying glass. The support services in your area will show up instantly.
-            refugees:
-              heading: How does clarat refugees work?
-              text: Enter your problem into the search field and the area where you are looking. Click on the magnifying glass. The support services in your area will show up instantly.
-          what:
-            family:
-              heading: What can you find here?
-              text: 'Information about support services in your area. For problems with: family, health, learning & work and violence & crime.'
-            refugees:
-              heading: What can you find here?
-              text: 'Information about support services in your area. For problems with: asylum & law, family, health, learning & work and violence & crime.'
-          who:
-            family:
-              text: Every family in Germany, parents, their children and pregnant women can find help here. Friends and relatives can, too.
-              heading: Who can find help here?
-            refugees:
-              heading: Who can find help here?
-              text: Everyone who has come to Germany as a refugee. Refugee children and young people, too. And people who are looking for help for refugees.
-            heading: 
-          callout:
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-                text: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
     widget:
       category_headline: 
   offer:
@@ -1075,9 +1075,15 @@ en:
             female: girls and women only
             girls_only: girls and women only
             male: boys and men only
+          residency_status:
+            before_the_asylum_decision: during the asylum procedure
+            with_a_residence_permit: with a residence permit
+            with_deportation_decision: with deportation notice
+            with_temporary_suspension_of_deportation: with temporary suspension of deportation
           target_audience:
             children: for children and teenagers
             family_children: for children and teenagers
+            family_everyone: 
             family_nuclear_family: for families
             family_parents: for parents
             family_parents_to_be: for parents to be
@@ -1086,19 +1092,13 @@ en:
             nuclear_family: for families
             parents: for parents
             pregnant_woman: for pregnant women
-            relatives: for friends and family
-            family_everyone: 
             refugees_children: for refugee children
             refugees_families: for refugee families
             refugees_general: for refugees
             refugees_parents: for refugee parents
             refugees_parents_to_be: for refugee expectant parents
             refugees_uf: for unaccompanied refugees
-          residency_status:
-            before_the_asylum_decision: during the asylum procedure
-            with_a_residence_permit: with a residence permit
-            with_deportation_decision: with deportation notice
-            with_temporary_suspension_of_deportation: with temporary suspension of deportation
+            relatives: for friends and family
       map_sidebar:
         map_output_searchresults: map output of the search results
       noscript_warning: |
@@ -1415,6 +1415,8 @@ en:
     faq:
       title: Frequently asked questions
     home:
+      explaination:
+        headline: 
       how:
         heading: How does clarat work?
         text: "First of all, just enter the problem you need help with. Or whatever\nit is that's worrying you. Or choose from our categories. And we'll show \nyou all the relevant support services offers in your neighbourhood. \nWe'll also tell you how to get this support. For example, if you should \ncall or write an email. Or, just stop by."
@@ -1439,8 +1441,6 @@ en:
       why:
         heading: Why does clarat exist?
         text: "It's easy to find help with clarat. In Germany, there are a lot of\nsupport services for children, teenagers and families. As well as\nfor refugees. But they're often very hard to find. We want to help \nyou find the help you need. You should search on clarat family if \nyou're looking for help for your family. And on clarat refugees if \nyou're looking for help for refugees."
-      explaination:
-        headline: 
     impressum:
       heading: Impressum
       notice: clarat ist a search engine. clarat tells you where to get help. For example, where you can find an expert to help you with your problem. clarat can only help you to find help.
@@ -1523,18 +1523,18 @@ en:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: clarat.org shows which support services there are in Germany. For children, teenagers and families. And for refugees. Online. Easy. Near you.
-      meta_title: clarat explains | clarat
-      title: Please choose your clarat-section
       cta:
         button: 
         family:
           text: 
         refugees:
           text: 
+      meta_description: clarat.org shows which support services there are in Germany. For children, teenagers and families. And for refugees. Online. Easy. Near you.
+      meta_title: clarat explains | clarat
       mission:
         headline: 
         text: 
+      title: Please choose your clarat-section
     shared:
       address:
         email: "%{mailto}\n"
@@ -1556,11 +1556,13 @@ en:
     impressum: impressum
     kontakt: contact
     liste: liste
+    liste-de-services: 
     new: new
     offers: offers
     organizations: organizations
     preview: preview
     rechtliche-hinweise: legal-information
+    refugees: 
     search_locations: search_locations
     subscribe: subscribe
     subscriptions: subscriptions
@@ -1568,12 +1570,11 @@ en:
     unsubscribe: unsubscribe
     update_requests: update_requests
     users: users
+    widget: 
     widget-handbook-germany: 
     widget-hg: 
     widget-start-with-a-friend: 
     widget-swaf: 
-    liste-de-services: 
-    refugees: 
   shareds:
     forms:
       fill_field: Please fill out this field
