--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -698,6 +698,11 @@ ru:
         xxx: 
         zho: Zho
         zza: Zza
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
       section:
         family: Family
         refugees: Refugees
@@ -707,11 +712,6 @@ ru:
       sort_order:
         nearby: Около
         relevance: Релевантность
-      residency_status:
-        before_the_asylum_decision: 
-        with_a_residence_permit: 
-        with_deportation_decision: 
-        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -787,14 +787,15 @@ ru:
         approach: Каким образом?
         gender: Пол
         language: Язык
+        residency_status: 
         sort: Сортировка по
         target_audience: Помощь для кого?
-        residency_status: 
       option_any: все равно
       pagination:
         back: Назад
         gap: "..."
         next: Дальше
+      reset_label: 
       sort:
         nearby: Неподалеку
         relevance: Самые релевантные результаты
@@ -802,7 +803,6 @@ ru:
         categories: категории
         filter: Фильтр
         map: карта
-      reset_label: 
     search_results:
       bridge: для
       enclosing: найдено
@@ -977,6 +977,44 @@ ru:
           link: Здесь ты узнаешь больше
           refugees: Так же скоро будут предложения для беженцев
           text: clarat.org в данный момент находится в развитии
+      callout:
+        callout:
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
+          how:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          what:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          who:
+            family:
+              heading: 
+              text: 
+            heading: 
+            refugees:
+              heading: 
+              text: 
       footer:
         about: О нас
         blog: Блог
@@ -998,6 +1036,26 @@ ru:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: عربي
+          de: Deutsch
+          en: English
+          fa: فارسی
+          fr: Français
+          pl: Polski
+          ru: Русский
+          tr: Türkçe
+      hero:
+        claim:
+          family: Предложения о помощи детям, молодежи и семьям
+        hero:
+          button_label: 
+          logline: 
       modal:
         beta_modal:
           link: просто напиши нам E-Mail.
@@ -1007,9 +1065,9 @@ ru:
             предложения для других городов. Мы будем рады твоей помощи:
             ты что-либо заметил, что нам стоит улучшить? Или что-то
             рабоатет не правильно? Тогда
+        more_information_overlay: 
         send: 
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
-        more_information_overlay: 
       nav_lang:
         legal_title: Юридический текст clarat можно читать только на немецком языке.
         title: "Автоматический перевод! \n<br><br>\nНекоторые тексты clarat переведены на твой язык Google Translate. Иногда эти тексты могут звучать несколько странно и неправильно. Мы работаем над улучшением качества наших переводов."
@@ -1048,64 +1106,6 @@ ru:
               family: перейти к <span class="top-bar__emphasis">clarat refugees</span>
               refugees: перейти к к <span class="top-bar__emphasis">clarat family</span>
         title: Автоматический перевод!
-      header:
-        about: 
-        blog: 
-        contact: 
-        faq: 
-        languages:
-          ar: 
-          de: 
-          en: 
-          fa: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
-      hero:
-        claim:
-          family: Предложения о помощи детям, молодежи и семьям
-        hero:
-          logline: 
-          button_label: 
-      callout:
-        callout:
-          how:
-            family:
-              heading: 
-              text: 
-            refugees:
-              heading: 
-              text: 
-          what:
-            family:
-              heading: 
-              text: 
-            refugees:
-              heading: 
-              text: 
-          who:
-            family:
-              text: 
-              heading: 
-            refugees:
-              heading: 
-              text: 
-            heading: 
-          callout:
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-                text: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
     widget:
       category_headline: 
   offer:
@@ -1142,9 +1142,15 @@ ru:
             female: только для девочек и женщин
             girls_only: только для девочек и женщин
             male: только для мальчиков и мужчин
+          residency_status:
+            before_the_asylum_decision: в процессе предоставления убежища
+            with_a_residence_permit: с видом на жительство
+            with_deportation_decision: с заключением о депортации
+            with_temporary_suspension_of_deportation: с правом на кратковременное пребывание в стране
           target_audience:
             children: для детей и молодежи
             family_children: для детей и молодежи
+            family_everyone: 
             family_nuclear_family: для семей
             family_parents: для родителей
             family_parents_to_be: для будущих родителей
@@ -1153,19 +1159,13 @@ ru:
             nuclear_family: для семей
             parents: для родителей
             pregnant_woman: для беременных
-            relatives: для знакомых и родственников
-            family_everyone: 
             refugees_children: для детей-беженцев
             refugees_families: для семей-беженцев
             refugees_general: для беженцев
             refugees_parents: для родителей-беженцев
             refugees_parents_to_be: для будущих родителей-беженцев
             refugees_uf: для беспризорных беженцев
-          residency_status:
-            before_the_asylum_decision: в процессе предоставления убежища
-            with_a_residence_permit: с видом на жительство
-            with_deportation_decision: с заключением о депортации
-            with_temporary_suspension_of_deportation: с правом на кратковременное пребывание в стране
+            relatives: для знакомых и родственников
       map_sidebar:
         map_output_searchresults: Вывод результатов поиска на карту
       noscript_warning: |
@@ -1392,6 +1392,8 @@ ru:
     faq:
       title: Частые вопросы
     home:
+      explaination:
+        headline: 
       how:
         heading: Kак работает clarat?
         text: Напиши, в чем именно заключается твоя проблема. Или что тебя волнует. Или выбери из предложенных тем. И ты сразу найдешь все возможные варианты помощи и поддержки поблизости. Мы также расскажем тебе, как ты можешь получить эту помощь. Например, нужно ли позвонить, написать email или прийти лично.
@@ -1412,8 +1414,6 @@ ru:
       why:
         heading: Для чего существует clarat?
         text: clarat помогает найти необходимую помощь. В Германии существует множество организаций по поддержке детей, молодежи и семей, а так же для помощи беженцам. Однако часто их довольно сложно найти. Именно в этом мы и помогаем. Если речь идет о семейных вопросах и проблемах, тебе нужно в clarat family (кларат фэмили). Если о беженцах - clarat refugees (кларат рефюджис).
-      explaination:
-        headline: 
     impressum:
       heading: Impressum
       notice: clarat — это поисковик. clarat скажет вам, где вы можете получить помощь. Например, где вы найдете специалистов, которые помогут с вашей проблемой. clarat также может помочь вам в ваших поисках.
@@ -1492,18 +1492,18 @@ ru:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: 
-      meta_title: 
-      title: Пожалуйста,  выберите ваш мир clarat
       cta:
         button: 
         family:
           text: 
         refugees:
           text: 
+      meta_description: 
+      meta_title: 
       mission:
         headline: 
         text: 
+      title: Пожалуйста,  выберите ваш мир clarat
     shared:
       address:
         email: "%{mailto}\n"
@@ -1525,11 +1525,13 @@ ru:
     impressum: Импрессум
     kontakt: contact
     liste: список
+    liste-de-services: 
     new: новый
     offers: предложения
     organizations: орагнизации
     preview: предварительный-просмотр
     rechtliche-hinweise: юридические-указания
+    refugees: 
     search_locations: поиск-местонахождения
     subscribe: subscribe
     subscriptions: подписки
@@ -1537,12 +1539,11 @@ ru:
     unsubscribe: unsubscribe
     update_requests: обновить-запросы
     users: пользователь
+    widget: 
     widget-handbook-germany: 
     widget-hg: 
     widget-start-with-a-friend: 
     widget-swaf: 
-    liste-de-services: 
-    refugees: 
   shareds:
     forms:
       fill_field: Пожалуйста, заполни это поле
