--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -598,6 +598,11 @@ tr:
         xxx: 
         zho: Zho
         zza: Zza
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
       section:
         family: Family
         refugees: Refugees
@@ -607,11 +612,6 @@ tr:
       sort_order:
         nearby: Nearby
         relevance: Relevance
-      residency_status:
-        before_the_asylum_decision: 
-        with_a_residence_permit: 
-        with_deportation_decision: 
-        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -687,14 +687,15 @@ tr:
         approach: Nasıl?
         gender: Cinsiyet
         language: Dil
+        residency_status: 
         sort: Göre sırala
         target_audience: Kim için destek?
-        residency_status: 
       option_any: fark etmez
       pagination:
         back: geri
         gap: "..."
         next: ileri
+      reset_label: 
       sort:
         nearby: Yakınlardaki
         relevance: En iyi maçlar
@@ -702,7 +703,6 @@ tr:
         categories: Kategoriler
         filter: filtre
         map: Harita
-      reset_label: 
     search_results:
       bridge: için
       enclosing: bulundu
@@ -867,6 +867,44 @@ tr:
           link: Burada daha fazla bilgi alabilirsin
           refugees: Yakında mülteciler için de hizmetlerimiz olacaktır
           text: clarat.org henüz yapım aşamasındadır
+      callout:
+        callout:
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
+          how:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          what:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          who:
+            family:
+              heading: 
+              text: 
+            heading: 
+            refugees:
+              heading: 
+              text: 
       footer:
         about: Hakkımızda
         blog: Blog
@@ -888,6 +926,26 @@ tr:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: عربي
+          de: Deutsch
+          en: English
+          fa: فارسی
+          fr: Français
+          pl: Polski
+          ru: Русский
+          tr: Türkçe
+      hero:
+        claim:
+          family: Çocuklar, gençler ve aileler için yardıum çeşitleri
+        hero:
+          button_label: 
+          logline: 
       modal:
         beta_modal:
           link: bize mesaj gönder.
@@ -895,13 +953,13 @@ tr:
             clarat.org adlı internet sayfamız henüz yenidir. Yakında başka şehirler için de yardım çeşitleri sunabileceğiz.
             Desteğinden ötürü mutlulu duyarız: Daha iyi yapabileceğimiz bir şey mi var? Ya da düzgün çalışmayan
             bir şey? o halde
+        more_information_overlay: 
         send: 
         unavailable_location_modal: |
           Bulunduğun yer için clarat'ta şuan yalnızca telefon desteği ya da online yardımlar bulunmaktadır.
           Yani sana telefonda ya da online olarak yardım edilecektir.
           Mesela E-Mail yolu ve ya online sohbette yardım edilecektir. Bulunduğun yerde de yardım alabildiğinde, seni
           memnuniyetle bilgilendireceğiz. Bunun için E-Mail adresini buraya yazabilirsin.
-        more_information_overlay: 
       nav_lang:
         legal_title: Clarat'ta, yasal metin yalnızca Almanca'da okunabilir.
         title: 
@@ -940,64 +998,6 @@ tr:
               family: 
               refugees: 
         title: Otomatik çeviriler
-      header:
-        about: 
-        blog: 
-        contact: 
-        faq: 
-        languages:
-          ar: 
-          de: 
-          en: 
-          fa: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
-      hero:
-        claim:
-          family: Çocuklar, gençler ve aileler için yardıum çeşitleri
-        hero:
-          logline: 
-          button_label: 
-      callout:
-        callout:
-          how:
-            family:
-              heading: 
-              text: 
-            refugees:
-              heading: 
-              text: 
-          what:
-            family:
-              heading: 
-              text: 
-            refugees:
-              heading: 
-              text: 
-          who:
-            family:
-              text: 
-              heading: 
-            refugees:
-              heading: 
-              text: 
-            heading: 
-          callout:
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-                text: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
     widget:
       category_headline: 
   offer:
@@ -1032,9 +1032,15 @@ tr:
             female: Yalnızca bayanlar için
             girls_only: Yalnızca bayanlar için
             male: Yalnızca erkekler için
+          residency_status:
+            before_the_asylum_decision: iltica prosedüründe
+            with_a_residence_permit: oturma izni ile
+            with_deportation_decision: sınırdışı belgesi ile
+            with_temporary_suspension_of_deportation: müsamaha ile
           target_audience:
             children: Çocuklar ve gençler için
             family_children: Çocuk ve gençler için
+            family_everyone: 
             family_nuclear_family: Aileler için
             family_parents: Ebeveynler için
             family_parents_to_be: Ebeveyn adayları için
@@ -1043,19 +1049,13 @@ tr:
             nuclear_family: Aileler için
             parents: Ebeveynler için
             pregnant_woman: Hamileler için
-            relatives: Tanıdık ve akrabalar için
-            family_everyone: 
             refugees_children: Kaçan çocuklar için
             refugees_families: Kaçan aileler için
             refugees_general: Mülteciler için
             refugees_parents: Kaçan ebeveynler için
             refugees_parents_to_be: ebeveyn olacak mülteciler için
             refugees_uf: sahipsiz, reşit olmayan mülteciler için
-          residency_status:
-            before_the_asylum_decision: iltica prosedüründe
-            with_a_residence_permit: oturma izni ile
-            with_deportation_decision: sınırdışı belgesi ile
-            with_temporary_suspension_of_deportation: müsamaha ile
+            relatives: Tanıdık ve akrabalar için
       map_sidebar:
         map_output_searchresults: Aramalarını haritaya dök
       noscript_warning: |
@@ -1285,6 +1285,8 @@ tr:
     faq:
       title: Sıkça sorulan sorular
     home:
+      explaination:
+        headline: 
       how:
         heading: Clarat nasıl çalışıyor?
         text: Hangi problem için yardıma ihtiyacın olduğunu ya da hangi konunun seni rahatsız ettiğini belirle. Ayrıca menümüzdeki kategorilerden de seçebilirsin. Bu sayede sana en yakın destek önerilerini göreceksin. Sana nasıl yardım alabileceğini de anlatıyoruz. Yardım almak için telefon açabilir, mail atabilir veya şahsen ofisimize gelebilirsin.
@@ -1305,8 +1307,6 @@ tr:
       why:
         heading: Clarat neden var?
         text: Clarat ile kolayca aradığın yardımı bulabilirsin. Almanya’da çocuklar, gençler ve ailelere destek olan cok çeşitli teklifler var. Bunların yanı sıra mülteciler için de bir çok imkan var ancak bunları bulmak kolay değil. İşte sana tam da bu aşamada yardımcı oluyoruz. Ailevi konularda clarat family’ye, sığınma konuları hakkında clarat refugees’e başvurabilirsin.
-      explaination:
-        headline: 
     impressum:
       heading: Impressum
       notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
@@ -1388,18 +1388,18 @@ tr:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: 
-      meta_title: 
-      title: 
       cta:
         button: 
         family:
           text: 
         refugees:
           text: 
+      meta_description: 
+      meta_title: 
       mission:
         headline: 
         text: 
+      title: 
     shared:
       address:
         email: "%{mailto}\n"
@@ -1421,11 +1421,13 @@ tr:
     impressum: künye
     kontakt: contact
     liste: liste
+    liste-de-services: 
     new: yeni
     offers: hizmetlerimiz
     organizations: organizasyonlar
     preview: ön-izleme
     rechtliche-hinweise: hukuki-uyarılar
+    refugees: 
     search_locations: search_locations
     subscribe: subscribe
     subscriptions: supsciptions
@@ -1433,12 +1435,11 @@ tr:
     unsubscribe: unsubscribe
     update_requests: update_request
     users: kullanıcılar
+    widget: 
     widget-handbook-germany: 
     widget-hg: 
     widget-start-with-a-friend: 
     widget-swaf: 
-    liste-de-services: 
-    refugees: 
   shareds:
     forms:
       fill_field: Lütfen bu alanı doldur
