Add even more missing translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -992,7 +992,7 @@ en:
           family: Support services for children, teenagers and families
         hero:
           button_label: Learn more
-          logline: 
+          logline: Find the help that suits you - simply explained and clearly arranged
       modal:
         beta_modal:
           link: write us a message.
