--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1532,7 +1532,7 @@ en:
       meta_description: clarat.org shows which support services there are in Germany. For children, teenagers and families. And for refugees. Online. Easy. Near you.
       meta_title: clarat explains | clarat
       mission:
-        headline: Our mission
+        headline: 'Our mission:'
         text: Make help which exists in Germany visible and explain it in easy terms.
       title: Please choose your clarat-section
     shared:
